added link to Julia Evans talks

--- a/resources.html
+++ b/resources.html
@@ -32,7 +32,9 @@
                             -->
                             <dt><a href="http://beej.us/guide/">Beej's Guides</a></dt>
                             <dd>Brian Hall's series of short, informative guides to C, Unix IPC, and the GNU Debugger. </dd>
-							<dt><a href="http://acm.case.edu/">Case ACM</a> &amp; <a
+							<dt><a href="http://jvns.ca/talks/">Julia Evans' talks</a></dt>
+                            <dd>Talks on systems programming concepts and tools.</dd>
+                            <dt><a href="http://acm.case.edu/">Case ACM</a> &amp; <a
 									href="http://goto.case.edu/">CWRU Hacker Society</a></dt>
 							<dd>Campus organizations that feature tech talks and events
 								(including OS&#8211;related topics).
