--- a/resources.html
+++ b/resources.html
@@ -34,6 +34,9 @@
                             <dd>Brian Hall's series of short, informative guides to C, Unix IPC, and the GNU Debugger. </dd>
 							<dt><a href="http://jvns.ca/talks/">Julia Evans' talks</a></dt>
                             <dd>Talks on systems programming concepts and tools.</dd>
+                            <dt><a href="https://deadlockempire.github.io/">The Deadlock Empire</a></dt>
+                            <dd>A game of concurrency problems with C# threads.  
+                                <br>You win by exposing synchronization errors!</dd>
                             <dt><a href="http://acm.case.edu/">Case ACM</a> &amp; <a
 									href="http://goto.case.edu/">CWRU Hacker Society</a></dt>
 							<dd>Campus organizations that feature tech talks and events
