--- a/past-assignments.html
+++ b/past-assignments.html
@@ -26,6 +26,9 @@
 						Assignment 2, pipes (2011 Spring): <a href="course-materials/past-assignments/2011-as2.pdf">assignment</a>, 
                                                   <a href="course-materials/past-assignments/2011-as2-solution.c">solution</a>
                         <br>
+						Assignment 3, semaphores (2011 Spring): <a href="course-materials/past-assignments/2011.as3.pdf">assignment</a>, 
+                                                  <a href="course-materials/past-assignments/2011.as3.solns.pdf">solution</a>
+                        <br>
                         
 					</td>
 				</tr>
