--- a/past-assignments.html
+++ b/past-assignments.html
@@ -29,7 +29,8 @@
 						Assignment 3, semaphores (2011 Spring): <a href="course-materials/past-assignments/2011.as3.pdf">assignment</a>, 
                                                   <a href="course-materials/past-assignments/2011.as3.solns.pdf">solution</a>
                         <br>
-                        
+						Assignment 4, monitors (2015 Spring): <a href="2015.as3.Monitors.Solns.pdf">assignment and solution</a>                                                  
+                        <br>
 					</td>
 				</tr>
 			</table>
