--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<div>
 			<h1>CWRU EECS 338: <br>Introduction to Operating Systems and Concurrent Programming</h1>
 
-			<h2>Spring 2016</h2>
+			<h2>Spring 2017</h2>
             
-            <h2>Instructor: Eamon Johnson (eamon@case)</h2>
+            <h2>Instructor: gultekin ozsoyoglu (tekin@case)</h2>
             
 		</div>
 		<div>
@@ -25,22 +25,24 @@
 					<td valign="top">
                         <h3>Class Times</h3>
                         <ul>
-                            <li>Lectures: Monday/Wednesday: 4-5:15pm, @ Bingham 103</li>
-                            <li>Recitation: Tuesday: 6-7pm @ Bingham 103</li>                   
+                            <li>Lectures: Monday/Wednesday/Friday: 2:15-3:05pm, @ Bingham 103</li>
+                            <li>Recitation: Tuesday: 6-7pm @ White 411</li>                   
                         </ul>
                         <h3>Help</h3>
                         <ul>
-                            <li>Eamon's office hours: 3-5pm Tuesday and Thursday @ Olin 414</li>
-                            <li>Emilio's office hours: 1:50-2:50pm Monday and Wednesday @ Olin 503</li>
-                            <li>Ke's office hours: 3-4pm Monday and 4-5pm Friday @ Olin 514</li> 
-                            <li>Yuanxu's office hours: 2-3pm Thursday and Friday @ Olin 503</li> 
+                            <li>Tekin's office hours: 10:30-11:30am Monday and Friday @ Olin 506</li>
+                            <li>Yiqian Chen's office hours: TBA</li>
+                            <li>Will Hollingsworth's office hours: TBA</li> 
+                            <li>TA3's office hours: TBA</li> 
+			    <li>TA4's office hours: TBA</li>
                             <li>email: please start the subject line with <span style="font-family: monospace;">eecs338</span></li>
                         </ul>
                         <h3>Teaching Assistants</h3>
                         <ul>
-                            <li>Emilio Colindres (exc231@case)</li>
-                            <li>Ke Hu (ke.hu@case)</li>
-                            <li>Yuanxu Li (yuanxu.li@case)</li>
+                            <li>Yiqian Chen (yxc602@case)</li>
+                            <li>Will Hollingsworth (whh34@case)</li>
+                            <li>TA3 TBA</li>
+			    <li>TA4 TBA</li>
                         </ul>
 						<!--
 						<h3>Recitation 7: ??</h3>
